# sitegen

./: README.md  pyproject.toml  sitegen.py  todo.org
_site/: about.html  digital-things.html  favorite-things.html  index.html  main.css  physical-things.html
_site/article/: all_these_crying_birds_by_deem_spencer.html  building_the_house.html  experiments_in_permaculture.html  hi,_my_name_is_franklin..html  low-tech_site_generator.html  pretty_agroforestree_database..html
_site/articles/: all_these_crying_birds_by_deem_spencer.html  building_the_house.html  experiments_in_permaculture.html  house.html  index.html  low-tech_site_generator.html  music-recap.html  permaculture.html  pretty.html  pretty_agroforestree_database..html
articles/: all_these_crying_birds_by_deem_spencer.html  building_the_house.html  experiments_in_permaculture.html  hi,_my_name_is_franklin..html  low-tech_site_generator.html  pretty_agroforestree_database..html
content/: test.md
content/0-about/: index.md
content/1-building-the-house/: house.md
content/2-music-june-24/: music-recap.md
content/2-pretty-agroforestree/: pretty.md
content/3-experiments-in-permaculture/: permaculture.md
content/4-pretty-agroforestree/: pretty.md
content/5-building-the-house/: house.md
content/5-pretty-agroforestree (copy)/: pretty.md
content/6-static-site-gen/: index.md
content/building-the-house/: house.md
layout/: article.html  article_image_wrap.html  article_list.html  article_list_item.html  cover.html  master.html
static/: main.css  main.js
util/: dither.py  parsing.py
(+2 files in other folders)
